2.3/manifests/task2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - useful-quarter.aeza.network
      secretName: web-tls
  rules:
    - host: useful-quarter.aeza.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
